sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:23: error: not found: value posCurseur
 		setValeur(posCurseur,stockeur)		
                          ^